--- a/gomoku-gui/gomoku-board.html
+++ b/gomoku-gui/gomoku-board.html
@@ -59,12 +59,67 @@
     flex: 1;
   }
 
+  .p1 {
+    background-color: black;
+    color: white;
+    border-width: 2px;
+    border-color: white;
+    border-style: solid;
+    height: 70px;
+    width: 170px;
+    font-size: 22px;
+    margin-right: 25px;
+  }
+
+  .p2 {
+    background-color: white;
+    color: black;
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+    height: 70px;
+    width: 170px;
+    font-size: 22px;
+    margin-left: 25px;
+  }
+
+  .reset {
+    background-color: white;
+    color: black;
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+    height: 70px;
+    width: 170px;
+    font-size: 22px;
+    margin-left: 25px;
+  }
+
   .instructions {
     text-align: left;
     font-size: 22px;
     margin-right: 20px;
     margin-left: 20px;
     line-height: 1.5;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+  }
+
+  #win {
+    display: none;
+    justify-content: center;
+  }
+
+  #win-text {
+    font-size: 60px;
+  }
+
+  #reset {
+    display: none;
+    justify-content: center;
   }
 </style>
 
@@ -85,8 +140,18 @@
         <p>To begin, click on the intersection where you would like to place your piece. You must wait for the algorithm
           to make its move before you take your next turn. </p>
       </div>
-      <input type="text" id="testInput">
-      <button type="button" onclick="submit()">Submit</button>
+      <div class="buttons">
+        <button type="button" class="p1">Player 1</button>
+        <button type="button" class="p2">Player 2</button>
+      </div>
+      <div id="win">
+        <p id="win-text"></p>
+      </div>
+      <div id="reset">
+        <button type="button" class="reset" onclick="reset()">Play Again</button>
+      </div>
+      <!-- <input type="text" id="testInput">
+      <button type="button" onclick="submit()">Submit</button> -->
     </div>
     <div class="game">
       <svg height="850" width="850" id="board"></svg>
@@ -94,6 +159,7 @@
   </div>
   <script>
     var piece = -1;
+    var displayWin = false;
 
     var pieceMatrix = [];
     let rows = 15;
@@ -236,10 +302,18 @@
           .attr("fill", color)
           .attr("opacity", 1)
           .on("click", null); //removes listener so cant be clicked again
-
-        updateMatrix(piece, d3.select(this).attr("class"));
+        let tag = d3.select(this).attr("class");
+        updateMatrix(piece, tag);
         piece *= -1; //so next placed piece has opposite color
         allowClick = false;
+        let coor = parseLocation(tag);
+
+        if (winCheck(coor[0], coor[1])) {
+          console.log("game over");
+        }
+        else {
+          computerPlays();
+        }
       }
       else {
         console.log("You cannot play another piece until the computer takes its turn.")
@@ -254,7 +328,7 @@
       //console.log(pieceMatrix);
     }
 
-    //Parses a circles class which is a string in format ROW-COL
+    //Parses a circles class which is a string in format r(row#)c(col#)
     function parseLocation(tag) {
       var regex = /r(\d+)c(\d+)/;
 
@@ -269,42 +343,282 @@
         let loc = [parseInt(i), parseInt(j)];
         return loc;
       }
-    }
-
-    function computerPlays() {
 
     }
 
-    function submit() {
-      //console.log("test");
-      //This function controls the input box that I am using to simulate algorithm game play
-      //To be removed once code is interfaced with actual algorithm
-      var inputValue = document.getElementById("testInput").value;
+    async function computerPlays() {
+      try {
+        // let move = await fetch('http://localhost:8000', {
+        //   method: 'POST',
+        //   headers: {
+        //     'Content-Type': 'application/json',
+        //   },
+        //   body: JSON.stringify(boardState),
+        // });
 
-      let color = "";
-      if (piece < 0) {
-        color = "black";
+        //
+        let test_data = { "board": JSON.stringify(pieceMatrix) };
+        let move = "";
+        await fetch("http://localhost:8000/receive_state", {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(test_data)
+        })
+          .then(response => response.json())
+          .then(data => move = data)  //API responds with JSON containing algorithm's move in format {"move":"row-col"}
+          .catch(error => console.error('Error:', error));
+
+        //console.log(move);
+
+        inputValue = move["move"].split("-");
+
+        let color = "";
+        if (piece < 0) {
+          color = "black";
+        }
+        else {
+          color = "white";
+        }
+
+        let circleClass = "r" + inputValue[0] + "c" + inputValue[1];  //convert move to corresponding circle class
+
+        d3.select("circle." + circleClass)
+          .attr("fill", color)
+          .attr("opacity", 1)
+          .on("click", null); //removes listener so cant be clicked again
+
+        updateMatrix(piece, circleClass);
+
+        if (winCheck(parseInt(inputValue[0]), parseInt(inputValue[1]))) {
+          console.log("game over");
+        }
+
+        else {
+
+          piece *= -1; //so next placed piece has opposite color
+          allowClick = true; //lets user place their piece again
+        }
+
       }
-      else {
-        color = "white";
+
+      catch (error) {
+        console.log('Error: ' + error);
       }
 
-      inputValue = inputValue.split("-")
-
-
-      let circleClass = "r" + inputValue[0] + "c" + inputValue[1];
-
-      d3.select("circle." + circleClass)
-        .attr("fill", color)
-        .attr("opacity", 1)
-        .on("click", null); //removes listener so cant be clicked again
-
-      updateMatrix(piece, circleClass);
-      piece *= -1; //so next placed piece has opposite color
-      allowClick = true; //lets user place their piece again
     }
+
+
+
+    // function submit() {
+    //   //console.log("test");
+    //   //This function controls the input box that I am using to simulate algorithm game play
+    //   //To be removed once code is interfaced with actual algorithm
+    //   var inputValue = document.getElementById("testInput").value;
+
+    //   let color = "";
+    //   if (piece < 0) {
+    //     color = "black";
+    //   }
+    //   else {
+    //     color = "white";
+    //   }
+
+    //   inputValue = inputValue.split("-")
+
+
+    //   let circleClass = "r" + inputValue[0] + "c" + inputValue[1];
+
+    //   d3.select("circle." + circleClass)
+    //     .attr("fill", color)
+    //     .attr("opacity", 1)
+    //     .on("click", null); //removes listener so cant be clicked again
+
+    //   updateMatrix(piece, circleClass);
+    //   piece *= -1; //so next placed piece has opposite color
+    //   allowClick = true; //lets user place their piece again
+    // }
 
     //END OF GAMEPLAY FUNCTIONALITY
+
+    //START WIN CHECKS
+
+
+    function checkDiagF(row, col) {
+      let ri = row + 1;
+      let rj = col + 1;
+
+      count = 1;
+
+      while (ri < pieceMatrix.length && rj < pieceMatrix.length && pieceMatrix[ri][rj] == pieceMatrix[row][col]) {
+        ri += 1;
+        rj += 1;
+        count += 1;
+        if (count >= 5) {
+          return true;
+        }
+
+      }
+
+      let li = row - 1;
+      let lj = col - 1;
+
+      while (li >= 0 && lj >= 0 && pieceMatrix[li][lj] == pieceMatrix[row][col]) {
+        li -= 1;
+        lj -= 1;
+        count += 1;
+        if (count >= 5) {
+          //console.log("win");
+          return true;
+        }
+      }
+      return false;
+
+    }
+
+    function checkDiagB(row, col) {
+      let li = row + 1;
+      let lj = col - 1;
+      let count = 1;
+
+      while (li < pieceMatrix.length && lj >= 0 && pieceMatrix[li][lj] == pieceMatrix[row][col]) {
+        li += 1;
+        lj -= 1;
+        count += 1;
+        if (count >= 5) {
+          //console.log("win");
+          return true;
+        }
+      }
+
+      let ri = row - 1;
+      let rj = col + 1;
+
+      while (ri >= 0 && rj < pieceMatrix.length && pieceMatrix[ri][rj] == pieceMatrix[row][col]) {
+        ri -= 1;
+        rj += 1;
+        count += 1;
+        if (count >= 5) {
+          return true;
+        }
+      }
+
+      return false;
+
+
+    }
+
+
+    function checkV(row, col) {
+      let ui = row + 1;
+      let count = 1;
+
+      while (ui < pieceMatrix.length && pieceMatrix[ui][col] == pieceMatrix[row][col]) {
+        ui += 1;
+        count += 1;
+        if (count >= 5) {
+          return true;
+        }
+      }
+
+      let di = row - 1;
+      while (di >= 0 && pieceMatrix[di][col] == pieceMatrix[row][col]) {
+        di -= 1;
+        count += 1;
+        if (count >= 5) {
+          return true;
+        }
+      }
+      return false;
+    }
+
+    function checkH(row, col) {
+
+      let ri = col + 1;
+      count = 1;
+
+      while (ri < pieceMatrix.length && pieceMatrix[row][ri] == pieceMatrix[row][col]) {
+        ri += 1;
+        count += 1;
+        if (count >= 5) {
+          return true;
+        }
+      }
+
+      let li = col - 1;
+      while (li >= 0 && pieceMatrix[row][li] == pieceMatrix[row][col]) {
+        li -= 1;
+        count += 1;
+        if (count >= 5) {
+          return true;
+        }
+      }
+      return false;
+    }
+
+
+    function winCheck(row, col) {
+      let res = checkDiagF(row, col);
+      let res1 = checkDiagB(row, col);
+      let res2 = checkV(row, col);
+      let res3 = checkH(row, col);
+      if (res || res1 || res2 || res3) {
+        console.log("WIN");
+        displayWin = true;
+        let winDiv = document.getElementById('win');
+        let resetDiv = document.getElementById('reset');
+        let winText = document.getElementById('win-text');
+        winDiv.style.display = 'flex';
+        resetDiv.style.display = 'flex';
+        let message = "wins!";
+        if (pieceMatrix[row][col] == -1) {
+          message = "Player 1 " + message;
+        }
+        else {
+          message = "Player 2 " + message;
+        }
+        winText.textContent = message;
+        return true;
+      }
+      return false;
+    }
+
+
+    //END WIN CHECKS
+
+    //Reset game to play again
+    function reset() {
+      allowClick = true;  //Player 1 can start
+      displayWin = false; //don't currently use this variable
+
+      //Clear all elements related to displaying a win
+      let winDiv = document.getElementById('win');
+      let resetDiv = document.getElementById('reset');
+      let winText = document.getElementById('win-text');
+      winDiv.style.display = 'none';
+      resetDiv.style.display = 'none';
+
+      //Reset to starting color (black)
+      piece = -1;
+
+      let rows = 15;
+      let cols = 15;
+
+      //Clear piece matrix (no pieces on board)
+      for (var i = 0; i < rows; i++) {
+        for (var j = 0; j < cols; j++) {
+          pieceMatrix[i][j] = 0;
+        }
+      }
+
+      //Reset circle elements so they disappear and can be clicked again
+      let circle = d3.selectAll("circle")
+        .attr("fill", "black")
+        .attr("opacity", 0)
+        .on("click", appearFunc);
+
+    }
 
 
   </script>
